# mem0

./: .gitignore  .gitmodules  AGENTS.md
integrations/mem0-plugin/: .codex-mcp.local.json  README.md
integrations/mem0-plugin/.opencode-plugin/: CHANGELOG.md  README.md  identity.test.ts  identity.ts  opencode-mem0.ts
integrations/mem0-plugin/scripts/: _search.py  auto_capture.py  auto_import.py  capture_compact_summary.py  capture_session_summary.py  import_competing_tools.py  install_codex_hooks.py  on_pre_compact.py  on_session_start.sh  session_timeline.py
integrations/mem0-plugin/tests/: test_self_hosted_urls.py
mem0-plugin/: .codex-mcp.local.json  config.local.toml
self-mem0/: .gitignore  README.md  SETUP_LOCAL.md  apply.sh  revert.sh
self-mem0/docs/: self-hosted-agents.mdx
self-mem0/examples/: claude-mcp.local.json
self-mem0/mcp_bridge/: README.md  pyproject.toml
self-mem0/mcp_bridge/mem0_mcp_bridge/: __init__.py  __main__.py
self-mem0/plugins/: patch_mem0_plugin.sh  redirect_mcp.sh
self-mem0/self_mem0/: __init__.py
self-mem0/self_mem0/server/: __init__.py  auth_token_scheme.py  bootstrap.py  dashscope_reranker.py  default_config_overrides.py  embed_chunking.py  memory_defaults.py  ping_route.py  sdk_compat.py
self-mem0/tests/: bench_models.py  bench_models_v2.py  test_model_dims.py
self-mem0/tests/results/: A_20260601_225806.json  A_20260601_232042.json  A_20260601_234647.json  (+10 more)
server/: auth.py  dev.Dockerfile  docker-compose.override.yaml  docker-compose.yaml  main.py  mem0.service
server/dashboard/: Dockerfile  package.json
(+1 files in other folders)
