[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem0-mcp-bridge"
version = "0.1.0"
description = "Stdio MCP server that forwards mem0 tool calls to a self-hosted Mem0 REST API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "mem0 contributors" }]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
mem0-mcp-bridge = "mem0_mcp_bridge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mem0_mcp_bridge"]
